--- a/kasa-master/src/about/about.scss
+++ b/kasa-master/src/about/about.scss
@@ -1,3 +1,6 @@
+@use "../utils/keyframes.scss" as *;
+@use "../utils/variables.scss" as *;
+
 .accordeon {
     .title{
         background:#ff6060;
