--- a/kasa-master/src/404.scss
+++ b/kasa-master/src/404.scss
@@ -1,3 +1,49 @@
-.text-error{
+@use "../src/utils/keyframes.scss" as *;
+@use "../src/utils/variables.scss" as *;
+
+.notFound{
+  height: 100%;
   font-size:224px;
+
+  .error{
+  height: 100%;
+  
+    .text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 100%;
+        margin-top: 5%;
+        margin-bottom: 6%;
+        h1{
+            font-size: 288px;
+        }
+        p{
+            font-size: 36px;
+        }
+        a{
+            margin-top: 4%;
+            width: auto;
+            text-decoration: underline;
+            color: $main-primary;
+        }
+    }
+  }
 }
+
+// @media screen and (max-width:600px){
+//   .notFound-error{
+//       height: auto;
+//       .container-notFound-text{
+//           margin-top: 175px;
+//           margin-bottom: 175px;
+//           height: auto;
+//           h1{
+//               font-size: 96px;
+//           }
+//           p{
+//               font-size: 18px;
+//           }
+//       }
+//   }
+// }
