--- a/kasa-master/src/App.scss
+++ b/kasa-master/src/App.scss
@@ -135,8 +135,24 @@ table {
 }
 
 .footer{
-  background:#000;
-  color: #fff;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  height: 210px ;
+  justify-content: center;
+  position:relative;
+  bottom: 0px;
+  width: 100%;
+  color: white;
+  
+  .logo{
+    margin: 1%;
+  }
+  .img{
+    margin-bottom: 2%;
+  }
+  
 }
+
+
 
