--- a/kasa-master/src/index.scss
+++ b/kasa-master/src/index.scss
@@ -1,3 +1,6 @@
+@use "../src/utils/keyframes.scss" as *;
+@use "../src/utils/variables.scss" as *;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
