--- a/kasa-master/src/404.scss
+++ b/kasa-master/src/404.scss
@@ -31,19 +31,22 @@
   }
 }
 
-// @media screen and (max-width:600px){
-//   .notFound-error{
-//       height: auto;
-//       .container-notFound-text{
-//           margin-top: 175px;
-//           margin-bottom: 175px;
-//           height: auto;
-//           h1{
-//               font-size: 96px;
-//           }
-//           p{
-//               font-size: 18px;
-//           }
-//       }
-//   }
-// }
+// // @media screen and (max-width:600px){
+// //   .notFound
+//         .error{
+// //        height: auto;
+        
+// //        .text{
+// //           margin-top: 175px;
+// //           margin-bottom: 175px;
+// //           height: auto;
+// //           h1{
+// //               font-size: 96px;
+// //           }
+// //           p{
+// //               font-size: 18px;
+// //           }
+// //        }
+//         }
+// //   }
+// // }
