--- a/kasa-master/src/404.scss
+++ b/kasa-master/src/404.scss
@@ -25,7 +25,7 @@
             margin-top: 4%;
             width: auto;
             text-decoration: underline;
-            color: $main-primary;
+            color: $color-primary;
         }
     }
   }
