--- a/kasa-master/src/App.scss
+++ b/kasa-master/src/App.scss
@@ -138,8 +138,9 @@ table {
 }
 
 .bodyHome{
-  margin-left: 5%;
-  margin-right: 5%;
+  // margin-left: 5%;
+  // margin-right: 5%;
+  margin: 0 auto;
   width: $desktop;
 }
 
