--- a/kasa-master/src/about/about.scss
+++ b/kasa-master/src/about/about.scss
@@ -34,7 +34,7 @@
         border-radius: 5px;
         color:$color-primary;
         font-size:24px;
-        width: 1000px;
+        width: 100%;
         height:0px;
         transition: all 0.3s;
     }
