--- a/kasa-master/src/about/about.scss
+++ b/kasa-master/src/about/about.scss
@@ -11,7 +11,6 @@
     background-position: center;
     height: 220px;
     display: flex;
-    margin-right: 40px;
     justify-content: center;
     align-items: center;
     margin-bottom: 40px;
@@ -19,41 +18,68 @@
 
 .accordeon {
     margin-left: 200px;
+    margin-bottom: 30px;
     .title{
         background:$color-primary;
         border-radius: 5px;
-        margin-bottom: 15px;
         color: $color-white;
         width: 1000px;
         height: 52px;
         font-size:24px;
-        cursor:pointer;
+        display: flex; /* Make title a flex container */
+        align-items: center; /* Vertically center items */
+        justify-content: space-between; /* Add space between title and arrow */
+        padding: 0 20px; /* Add padding for arrow */
     }
     .content{
         background:$color-white;
         border-radius: 5px;
         color:$color-primary;
-        font-size:24px;
-        width: 100%;
+        font-size:19px;
+        line-height: 26px;
+        width: 1000px;
         height:0px;
-        transition: all 0.3s;
+        overflow:hidden;
+        transition: height 0.3s;
     }
     .content.open{
         border-radius: 5px;
+        background-color: $color-grey;
         width: 1000px;
-        height: 52px;
+        margin:0 0 10px 0;
+        padding: 20px 20px 20px 20px;
         height:auto;
         display: block;
     }
     .arrow{
+        cursor: pointer;
         display: inline-flex;
         color:$color-white;
         font-size:40px;
         transition: all 0.3s;
-        transform: rotateX(180deg);
+        transform: rotate(180deg);
     }
     .arrow.open{
         transform: rotate(0deg);
         transition: all 0.4s ease-in-out;
     }
 }
+
+
+@media screen and (max-width: 1200px) {
+    .bodyHome {
+        width: 100%;
+    }
+    .accordeon{
+        margin-left:0
+    }
+    .accordeon .title{
+        width:100%
+    }
+    .photoAbout{
+        margin-right:0
+    }
+    .accordeon .content.open{
+        width: 100%
+    }
+  }
