--- a/kasa-master/src/home/home.scss
+++ b/kasa-master/src/home/home.scss
@@ -11,7 +11,7 @@
     background-position: center;
     height: 220px;
     display: flex;
-    margin-right: 40px;
+    margin-right: 0;
     justify-content: center;
     align-items: center;
     margin-bottom: 40px;
@@ -24,4 +24,10 @@
         align-self: flex-end;
         padding:20px;
     }
+}
+@media screen and (max-width: 1200px) {
+    .everywhere{
+        font-size:32px
+    }
+
 }
