--- a/kasa-master/src/details/details.scss
+++ b/kasa-master/src/details/details.scss
@@ -5,24 +5,23 @@
     display: flex;
     justify-content: space-between;
     margin-top: 35px;
-    width: 100%;
 }
 
 .accordeonDetails {
     margin-bottom: 30px;
-    width: 48%;
+    display: inline-flex;
+    justify-content: space-between;
     .title{
         background:$color-primary;
         border-radius: 5px;
         color: $color-white;
-        width: 100%;
         height: 52px;
         font-size:24px;
         display: flex; /* Make title a flex container */
         align-items: center; /* Vertically center items */
-        justify-content: space-between; /* Add space between title and arrow */
         padding: 0 20px; /* Add padding for arrow */
-        margin-bottom:0
+        margin-bottom:0;
+        justify-content: space-between;
     }
     .content{
         background:$color-white;
