--- a/kasa-master/src/components/card/card.scss
+++ b/kasa-master/src/components/card/card.scss
@@ -1,13 +1,14 @@
 @import '../../sass/main.scss';
+@import '../../sass/utils/variables';
 
 .gallery_card{
     position: relative;
-    width: 30%;
     height: 340px;
     border-radius: 10px;
     cursor: pointer;
     overflow: hidden;
-    transition : box-shadow 0.2s ease-in-out;
+    background-image: linear-gradient(360deg, black, $color-primary);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     @media screen and (max-width: 1230px){
         width: 47%;   
     }
@@ -17,6 +18,7 @@
     @media screen and (max-width: 500px){
         height: 200px;
     }
+
     &::after{
         content: '';
         z-index: 10;
