--- a/kasa-master/src/components/collapse/collapse.scss
+++ b/kasa-master/src/components/collapse/collapse.scss
@@ -38,9 +38,7 @@
         padding: 10px;
         font-size: 14px;
         color: $color-secondary;
-        transition: visibility 0.5s ease-in-out,
-                    opacity 0.5s ease-in-out,
-                    height 0.3s ease-in-out;
+        transition: height 1s ease-in-out;
     }
     &_content_hidden{
         visibility: hidden;
